Add basis of add team reflex

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,1 +1,5 @@
-Hello
+<button data-controller="add-team" data-action="add-team#add">Add player</button>
+
+<%= @game.inspect %>
+<%= @game.teams.inspect %>
+Total teams: <%= @game.teams.count %>
