--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.teams-container {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.pokemon-container {
+	display: flex;
+	flex-direction: column;
+}
+
