--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -6,17 +6,19 @@ Total teams: <%= @game.teams.count %>
 
 <div class="teams-container">
   <% for team in @game.teams do %>
-    Team
-    <div class="pokemon-container">
-      <% for pokemon in team.pokemons do %>
-        <div class="pokemon">
-          <p>Pokemon <%= pokemon.pokedex_id %></p>
-          <p>Nickname <%= pokemon.nickname %></p>
-        </div>
-      <% end %>
-      <% if team.pokemons.count < 6 %>
-        <button data-controller="add-pokemon" data-action="add-pokemon#add">Add pokemon</button>
-      <% end %>
+    <div class="team">
+      Team <%= team.id %>
+      <div class="pokemon-container">
+        <% for pokemon in team.pokemons do %>
+          <div class="pokemon">
+            <p>Pokemon <%= pokemon.pokedex_id %></p>
+            <p>Nickname <%= pokemon.nickname %></p>
+          </div>
+        <% end %>
+        <% if team.pokemons.count < 6 %>
+          <button data-controller="add-pokemon" data-action="add-pokemon#add" data-team="<%= team.id %>">Add pokemon</button>
+        <% end %>
+      </div>
     </div>
   <% end %>
 </div>
