--- a/app/views/games/_pokemons.html.erb
+++ b/app/views/games/_pokemons.html.erb
@@ -1,6 +1,7 @@
 <div class="pokemon-container">
   <% for pokemon in pokemons do %>
     <div class="pokemon">
-      <%= render partial: "pokemon", locals: {pokemon: pokemon} %>
+      <%= render "pokemon", pokemon: pokemon %>
     </div> 
   <% end %> 
+</div>
