--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,12 +4,6 @@
 
 <div class="teams-container">
   <% for team in @game.teams do %>
-    <div class="team">
-      Team <%= team.id %>
-      <%= render "pokemons", pokemons: team.pokemons %>
-      <% if team.pokemons.count < 6 %>
-        <button data-controller="add-pokemon" data-action="add-pokemon#add" data-team="<%= team.id %>">Add pokemon</button>
-      <% end %>
-    </div>
+    <%= render "team", team: team %>
   <% end %>
 </div>
