--- a/app/views/games/_pokemon.html.erb
+++ b/app/views/games/_pokemon.html.erb
@@ -1,6 +1,5 @@
 <div>
-  <label for="pokedex-id">Pokedex id: </label>
-  <input id="pokemon-id-<%= pokemon.id %>" data-controller="edit-pokemon" data-action="keypress->edit-pokemon#editPokedexId" data-id="<%= pokemon.id %>" type=number name="pokedex-id" value="<%= pokemon.pokedex_id %>"></input> 
   <label for="pokedex-nickname">Pokemon nickname: </label>
-  <input id="pokemon-<%= pokemon.id %>"data-controller="edit-pokemon" data-action="keypress->edit-pokemon#edit" data-id="<%= pokemon.id %>" type=text name="pokedex-nickname" value="<%= pokemon.nickname %>"></input>
+  <input id="pokemon-<%= pokemon.id %>" data-controller="edit-pokemon" data-action="keypress->edit-pokemon#edit" data-id="<%= pokemon.id %>" type=text name="pokedex-nickname" value="<%= pokemon.nickname %>"></input>
+<%= render "pokemon_drop_down", pokemon_id: pokemon.id, pokedex_id: pokemon.pokedex_id %>
 </div>
