Remove pokemon drop down and add teams partial
Pokemon drop down causing too many performance issues. Just going to try
a drop down that is generated on click or something

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,8 +2,4 @@
 
 <%= @game.inspect %>
 
-<div class="teams-container">
-  <% for team in @game.teams do %>
-    <%= render "team", team: team %>
-  <% end %>
-</div>
+<%= render partial: "teams", locals: {teams: @game.teams} %>
