--- a/app/views/games/_pokemon_drop_down.html.erb
+++ b/app/views/games/_pokemon_drop_down.html.erb
@@ -1,9 +1,9 @@
 <label for="pokemon-id-<%= pokemon_id %>">Pokemon: </label>
-  <% all_pokemon =  Rails.cache.read("all_pokemon") %>
+<%= pokedex_id %>
 <select name="pokemon-id" id="pokemon-id-<%= pokemon_id %>" data-controller="edit-pokemon" data-action="change->edit-pokemon#editPokedexId" data-id="<%= pokemon_id %>">
-    <% all_pokemon.each_with_index do |pokemon, index| %>
-      <option value="<%= index + 1 %>" 
-      <%= "selected=true" unless pokedex_id != index + 1 %>>
+    <% @all_pokemon.each_with_index do |pokemon, index| %>
+      <option value="<%= index + 1%>"
+      <%= "selected=true" unless pokedex_id != index + 1%>>
       <%= pokemon.pokemon_species.name %></option>
     <% end %>
 </select>
