Order pokemon by created_at

--- a/app/views/games/_pokemons.html.erb
+++ b/app/views/games/_pokemons.html.erb
@@ -1,4 +1,5 @@
 <div class="pokemon-container">
+  <% pokemons = pokemons.order(:created_at) %>
   <% for pokemon in pokemons do %>
     <div class="pokemon">
       <%= render "pokemon", pokemon: pokemon %>
