--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -7,8 +7,17 @@
 	flex-wrap: wrap;
 }
 
+.team {
+	border-bottom: 5px solid black;
+	border-left: 5px solid black;
+}
+
 .pokemon-container {
 	display: flex;
 	flex-direction: column;
 }
 
+.dead-pokemon-container {
+	background-color: grey;
+	border: 5px solid red;
+}
