--- a/app/views/games/_pokemon.html.erb
+++ b/app/views/games/_pokemon.html.erb
@@ -10,10 +10,13 @@
     <span id="pokemon-<%= pokemon.id %>-pokedex-id"> <%= all_pokemon[pokemon.pokedex_id - 1].pokemon_species.name %> </span> 
   <% end %>
 
+
   <% if @is_editing_pokemon && pokemon.id == @pokemon_in_edit %>
     <%= render "pokemon_drop_down", pokemon_id: pokemon.id, pokedex_id: pokemon.pokedex_id %>
   <% end %>
 
   <button data-controller="edit-pokemon" data-action="click->edit-pokemon#toggleAlive" data-id="<%= pokemon.id %>">Toggle alive</button>
   <span id="pokemon-<%= pokemon.id %>-is-alive"><%= pokemon.is_alive? ? "Alive" : "Dead" %></span>
+  <button data-controller="edit-pokemon" data-action="click->edit-pokemon#toggleBoxed" data-id="<%= pokemon.id %>">Toggle boxed</button>
+  <span id="pokemon-<%= pokemon.id %>-is-boxed"><%= pokemon.is_boxed? ? "Boxed" : "Not boxed" %></span>
 </div>
