--- a/app/views/games/_pokemons.html.erb
+++ b/app/views/games/_pokemons.html.erb
@@ -1,9 +1,10 @@
 <div class="pokemon-container">
   <% pokemons = pokemons.order(:created_at) %>
   <% pokemons.each_with_index do |pokemon, i|%>
+    <% srand(i) %>
+    <% colour = "%06x" % (rand * 0xffffff) %>
     <% if pokemon.is_alive? && !pokemon.is_boxed? %>
-      <% i = i + 2 %>
-          <div style="background-color: rgba(<%= (i + 3)* i * i * i %>, 255, 255)" class="pokemon">
+      <div style="background-color: #<%=colour%>" class="pokemon">
         <%= render "pokemon", pokemon: pokemon %>
       </div> 
     <% end %>
@@ -17,8 +18,9 @@
   Dead
   <% pokemons.each_with_index do |pokemon, i|%>
     <% unless pokemon.is_alive? %>
-      <% i = i + 2 %>
-      <div style="background-color: rgba(<%= (i + 3)* i * i * i %>, 255, 255)" class="pokemon">
+      <% srand(i) %>
+      <% colour = "%06x" % (rand * 0xffffff) %>
+      <div style="background-color: #<%=colour%>" class="pokemon">
         <%= render "pokemon", pokemon: pokemon %>
       </div> 
     <% end %>
@@ -27,8 +29,9 @@
   Boxed
   <% pokemons.each_with_index do |pokemon, i|%>
     <% if pokemon.is_boxed? && pokemon.is_alive? %>
-      <% i = i + 2 %>
-      <div style="background-color: rgba(<%= (i + 3)* i * i * i %>, 255, 255)" class="pokemon">
+      <% srand(i) %>
+      <% colour = "%06x" % (rand * 0xffffff) %>
+      <div style="background-color: #<%=colour%>" class="pokemon">
         <%= render "pokemon", pokemon: pokemon %>
       </div> 
     <% end %>
