--- a/app/views/games/_pokemon.html.erb
+++ b/app/views/games/_pokemon.html.erb
@@ -1,23 +1,25 @@
-<div id="pokemon-<%= pokemon.id %>-container">
-  <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/<%= pokemon.pokedex_id %>.png"/>
-  <label for="pokedex-nickname">Pokemon nickname: </label>
-  <input id="pokemon-<%= pokemon.id %>" data-controller="edit-pokemon" data-action="change->edit-pokemon#edit" data-id="<%= pokemon.id %>" type=text name="pokedex-nickname" value="<%= pokemon.nickname %>"></input>
-  <button id="pokemon-<%= pokemon.id %>-button" data-controller="edit-pokemon" data-action="click->edit-pokemon#displayPokedexIdEdit" data-id="<%= pokemon.id %>">edit pokemon</button>
-  <% unless @all_pokemon.nil? %>
-    <span id="pokemon-<%= pokemon.id %>-pokedex-id"> <%= @all_pokemon[pokemon.pokedex_id - 1].pokemon_species.name %> </span> 
-  <% else %>
-    <% all_pokemon = Rails.cache.read("all_pokemon") %>
-    <% # TODO Seems there's a bit of lag when updating the DOM here due to the cache read? %>
-    <span id="pokemon-<%= pokemon.id %>-pokedex-id"> <%= all_pokemon[pokemon.pokedex_id - 1].pokemon_species.name %> </span> 
-  <% end %>
+<div id="pokemon-<%= pokemon.id %>-container" class="pokemon">
+  <img class="pokemon-sprite" width="96" height="96" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/<%= pokemon.pokedex_id %>.png"/>
+  <div class="pokemon-inputs">
+    <label for="pokedex-nickname">Pokemon nickname: </label>
+    <input id="pokemon-<%= pokemon.id %>" data-controller="edit-pokemon" data-action="change->edit-pokemon#edit" data-id="<%= pokemon.id %>" type=text name="pokedex-nickname" value="<%= pokemon.nickname %>"></input>
+    <button id="pokemon-<%= pokemon.id %>-button" data-controller="edit-pokemon" data-action="click->edit-pokemon#displayPokedexIdEdit" data-id="<%= pokemon.id %>">edit pokemon</button>
+    <% unless @all_pokemon.nil? %>
+      <span id="pokemon-<%= pokemon.id %>-pokedex-id"> <%= @all_pokemon[pokemon.pokedex_id - 1].pokemon_species.name %> </span> 
+    <% else %>
+      <% all_pokemon = Rails.cache.read("all_pokemon") %>
+      <% # TODO Seems there's a bit of lag when updating the DOM here due to the cache read? %>
+      <span id="pokemon-<%= pokemon.id %>-pokedex-id"> <%= all_pokemon[pokemon.pokedex_id - 1].pokemon_species.name %> </span> 
+    <% end %>
 
 
-  <% if @is_editing_pokemon && pokemon.id == @pokemon_in_edit %>
-    <%= render "pokemon_drop_down", pokemon_id: pokemon.id, pokedex_id: pokemon.pokedex_id %>
-  <% end %>
+    <% if @is_editing_pokemon && pokemon.id == @pokemon_in_edit %>
+      <%= render "pokemon_drop_down", pokemon_id: pokemon.id, pokedex_id: pokemon.pokedex_id %>
+    <% end %>
 
-  <button data-controller="edit-pokemon" data-action="click->edit-pokemon#toggleAlive" data-id="<%= pokemon.id %>">Toggle alive</button>
-  <span id="pokemon-<%= pokemon.id %>-is-alive"><%= pokemon.is_alive? ? "Alive" : "Dead" %></span>
-  <button data-controller="edit-pokemon" data-action="click->edit-pokemon#toggleBoxed" data-id="<%= pokemon.id %>">Toggle boxed</button>
-  <span id="pokemon-<%= pokemon.id %>-is-boxed"><%= pokemon.is_boxed? ? "Boxed" : "Not boxed" %></span>
+    <button data-controller="edit-pokemon" data-action="click->edit-pokemon#toggleAlive" data-id="<%= pokemon.id %>">Toggle alive</button>
+    <span id="pokemon-<%= pokemon.id %>-is-alive"><%= pokemon.is_alive? ? "Alive" : "Dead" %></span>
+    <button data-controller="edit-pokemon" data-action="click->edit-pokemon#toggleBoxed" data-id="<%= pokemon.id %>">Toggle boxed</button>
+    <span id="pokemon-<%= pokemon.id %>-is-boxed"><%= pokemon.is_boxed? ? "Boxed" : "Not boxed" %></span>
+  </div>
 </div>
