Limit number of teams/players to 6

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,6 @@
-<button data-controller="add-team" data-action="add-team#add">Add player</button>
+<% unless @game.teams.count >= 6 %>
+  <button data-controller="add-team" data-action="add-team#add">Add player</button>
+<% end %>
 
 <%= @game.inspect %>
 
