Add limit to pokemon in each team

--- a/app/views/games/_pokemons.html.erb
+++ b/app/views/games/_pokemons.html.erb
@@ -10,7 +10,7 @@
     <% end %>
   <% end %> 
 </div>
-<% if pokemons.count < 6 %>
+<% unless pokemons.count >= 100 %>
   <button data-controller="add-pokemon" data-action="add-pokemon#add">Add pokemon</button>
 <% end %>
 
