--- a/app/views/games/_pokemon.html.erb
+++ b/app/views/games/_pokemon.html.erb
@@ -5,7 +5,7 @@
     <input id="pokemon-<%= pokemon.id %>" data-controller="edit-pokemon" data-action="change->edit-pokemon#edit" data-id="<%= pokemon.id %>" type=text name="pokedex-nickname" value="<%= pokemon.nickname %>"></input>
     <button id="pokemon-<%= pokemon.id %>-button" data-controller="edit-pokemon" data-action="click->edit-pokemon#displayPokedexIdEdit" data-id="<%= pokemon.id %>">edit pokemon</button>
     <% unless @all_pokemon.nil? %>
-      <span id="pokemon-<%= pokemon.id %>-pokedex-id"> <%= @all_pokemon[pokemon.pokedex_id - 1].pokemon_species.name %> </span> 
+      <span id="pokemon-<%= pokemon.id %>-pokedex-id"> <%= @all_pokemon[pokemon.pokedex_id - 1].pokemon_species.name.capitalize %> </span> 
     <% else %>
       <% all_pokemon = Rails.cache.read("all_pokemon") %>
       <% # TODO Seems there's a bit of lag when updating the DOM here due to the cache read? %>
