Reword edit pokemon drop down

--- a/app/views/games/_pokemon_drop_down.html.erb
+++ b/app/views/games/_pokemon_drop_down.html.erb
@@ -4,4 +4,4 @@
       <%= pokemon.pokemon_species.name %></option>
     <% end %>
 </datalist>
-<input id="pokemon-id-<%= pokemon_id %>" placeholder="Edit pokemon" autoComplete="on" list="pokemon-datalist" data-controller="edit-pokemon" data-action="change->edit-pokemon#editPokedexId" data-id="<%= pokemon_id %>"/> 
+<input id="pokemon-id-<%= pokemon_id %>" placeholder="New pokemon name" autoComplete="on" list="pokemon-datalist" data-controller="edit-pokemon" data-action="change->edit-pokemon#editPokedexId" data-id="<%= pokemon_id %>"/> 
