--- a/app/views/games/_pokemon.html.erb
+++ b/app/views/games/_pokemon.html.erb
@@ -3,7 +3,7 @@
   <div class="pokemon-inputs">
     <label for="pokedex-nickname">Pokemon nickname: </label>
     <input id="pokemon-<%= pokemon.id %>" data-controller="edit-pokemon" data-action="change->edit-pokemon#edit" data-id="<%= pokemon.id %>" type=text name="pokedex-nickname" value="<%= pokemon.nickname %>"></input>
-    <button id="pokemon-<%= pokemon.id %>-button" data-controller="edit-pokemon" data-action="click->edit-pokemon#displayPokedexIdEdit" data-id="<%= pokemon.id %>">edit pokemon</button>
+    <button id="pokemon-<%= pokemon.id %>-button" data-controller="edit-pokemon" data-action="click->edit-pokemon#displayPokedexIdEdit" data-id="<%= pokemon.id %>">Change pokemon</button>
     <% unless @all_pokemon.nil? %>
       <span id="pokemon-<%= pokemon.id %>-pokedex-id"> <%= @all_pokemon[pokemon.pokedex_id - 1].pokemon_species.name.capitalize %> </span> 
     <% else %>
