--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -5,21 +5,27 @@
 .teams-container {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
+	text-align: center
 }
 
 .team {
-	border-bottom: 5px solid black;
-	border-left: 5px solid black;
+	border-right: 3px solid black;
+	border-bottom: 3px solid black;
 }
-
 .pokemon-container {
 	display: flex;
 	flex-direction: column;
 }
 
-.dead-pokemon-container {
-	background-color: grey;
-	border: 5px solid red;
+.dead-container {
+	border: 3px solid #e63946;
+	background-color: #e63946;
+}
+
+.boxed-container {
+	border: 3px solid #9bf6ff;
+	background-color: #9bf6ff;
 }
 
 .pokemon {
@@ -35,4 +41,10 @@
 .pokemon-sprite {
 	margin-top: auto;
 	margin-bottom: auto;
+}
+
+.container-toggle {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
 }
