Add little intro and notify when max pokemon limit reached

--- a/app/views/games/_pokemons.html.erb
+++ b/app/views/games/_pokemons.html.erb
@@ -1,5 +1,7 @@
 <div class="pokemon-container">
-<% unless pokemons.count >= 100 %>
+<% if pokemons.count >= 100 %>
+  Max pokemon limit reached
+<% else %>
   <button id="team-<%= team_id %>-add-button" data-controller="add-pokemon" data-action="add-pokemon#add">Add pokemon</button>
 <% end %>
   <% pokemons = pokemons.order(:created_at) %>
