Style initial info slightly

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -54,3 +54,11 @@
 	flex-direction: column;
 	text-align: center;
 }
+
+.info {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 20%;
+
+}
